@startuml

title __DAOUTILS's Class Diagram__\n

  package utils {
    package utils.daoUtils {
      class BoutiqueDAO {
          - logger : Logger
          + BoutiqueDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
          + findWhoSale()
          + getNbBoutiques()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class CategorieBoutiqueDAO {
          - logger : Logger
          + CategorieBoutiqueDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class CategorieProduitDAO {
          - logger : Logger
          + CategorieProduitDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class EmplacementDAO {
          - logger : Logger
          + EmplacementDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
          + getPathLocation()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class FournisseurDAO {
          - logger : Logger
          + FournisseurDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class ProduitDAO {
          - logger : Logger
          + ProduitDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class StockEntreeDAO {
          - logger : Logger
          + StockEntreeDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  package utils {
    package utils.daoUtils {
      class StockSortieDAO {
          - logger : Logger
          + StockSortieDAO()
          + create()
          + delete()
          + update()
          + find()
          + findFromReference()
          + findFromReference()
          + findFromReference()
      }
    }
  }
  

  BoutiqueDAO -up-|> DAO
  BoutiqueDAO o-- Client : client
  CategorieBoutiqueDAO -up-|> DAO
  CategorieProduitDAO -up-|> DAO
  EmplacementDAO -up-|> DAO
  FournisseurDAO -up-|> DAO
  ProduitDAO -up-|> DAO
  StockEntreeDAO -up-|> DAO
  StockSortieDAO -up-|> DAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
